2001-07-19  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-util.c (create_control_cb): Use a static variable for
	the control and return NULL if the control was already created

2001-07-18  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-util.c (create_control_cb): Store listener id in
	property control
	(quit_cb): Remove listener before releasing database
	(set_moniker_cb): Kill any existing db object in case the moniker
	is set more than once
	(set_moniker_cb): Connect destroy signal on pf to pf_destroy_cb
	(pf_destroy_cb): Implement

2001-07-18  Richard Hestilow  <hestilow@ximian.com>
	
	* capplet-util.[ch]: Revert my last proxy-related change.

2001-07-18  Richard Hestilow  <hestilow@ximian.com>

	* capplet-util.h (CreateDialogFn): Add a PropertyBag argument so
	capplet authors can hook up to the proxy.

	* capplet-util.c (get_control_cb): Pass the proxy bag to setup_cb.
	(capplet_init): Don't free default_moniker until after we print it.

2001-07-17  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-util.c (capplet_init): Support --init-session-settings
	for compatibility reasons
	(setup_session_mgmt): Implement. Make sure capplet runs the next
	time the user logs in
	(capplet_init): Call setup_session_mgmt for --get-legacy and
	standard execution
	(get_property_name): Implement. Return the property name
	associated with the capplet
	(set_moniker_cb): Use GTK_BIN (pf)->child rather than
	bonobo_control_get_widget
	(get_control_cb): Destroy the property control when the control or
	the widget are destroyed
	(quit_cb): Implement
	(create_control_cb): Connect destroy signal of property control to
	quit_cb
	(get_factory_name):
	(get_default_moniker):
	(get_property_name): Use correct names when the full path was
	specified for the executable

	* Makefile.am (INCLUDES): Removed -DGLADE_DATADIR

	* capplet-util.c (create_dialog_cb): Use create_widget_cb rather
	than loading from Glade
	(capplet_init): Accept CreateDialogFn and initialize
	create_dialog_cb